# DBOT

./: README.md
models/模型文件/3D打印文件/: 大腿长连杆固定圆柱_4件.stl  大臂关节固定件_2件.stl  头部前盖_1件.stl  头部后盖_1件.stl  头部连接固定件_1件.stl  小新名字贴片_1件.stl  小腿+大腿短连杆固定圆柱_4.stl  小臂关节_2件.stl  弧度脚底_TPU_2件.stl  板卡固定件_1件.stl  胸部固定件_1件.stl  胸部背部支撑件_1件.stl  胸部语音+手势固定件_1件.stl  脚底固定件_2件.stl  腰部固定件_1件.stl  膝盖固定件_4.stl  膝盖垫片_8件.stl  跨部紧固件_1件.stl
models/模型文件/CNC切割文件/: 脚踝_4件.step  腿部连杆1_8件.step  腿部连杆_8件.step  膝盖构件_4件.step  跨部连接件_2件（金属）.step
robot_catkin_ws/: kill_ever_node.sh  robot_debug_launch.sh  robot_launch.sh  robot_launch_2.sh
robot_catkin_ws/devel/: local_setup.sh
robot_catkin_ws/devel/include/robot_manager/: imu_date.h  robot_control.h  robot_debug.h  robot_speaker.h  robot_state.h
robot_catkin_ws/install/: setup.sh
robot_catkin_ws/src/robot_i2c_driver/: CMakeLists.txt
robot_catkin_ws/src/robot_key_control/: CMakeLists.txt
robot_catkin_ws/src/robot_machine_driver/: CMakeLists.txt
robot_catkin_ws/src/robot_machine_driver/include/robot_machine_driver/: robot_machine_driver.h
robot_catkin_ws/src/robot_machine_driver/launch/: robot_machine_driver.launch
robot_catkin_ws/src/robot_machine_driver/src/: robot_machine_driver.cpp
robot_catkin_ws/src/robot_manager/: CMakeLists.txt
robot_catkin_ws/src/robot_manager/include/robot_manager/: robot_manager.h
robot_catkin_ws/src/robot_manager/launch/: robot_start.launch  robot_test.launch
robot_catkin_ws/src/robot_manager/msg/: imu_date.msg  robot_control.msg  robot_debug.msg  robot_i2c_speak.msg  robot_machine.msg  robot_speak_flag.msg  robot_speaker.msg  robot_state.msg  robot_vosk.msg
robot_catkin_ws/src/robot_manager/src/: robot_manager.cpp
robot_catkin_ws/src/robot_speak/: CMakeLists.txt  package.xml
robot_catkin_ws/src/ros_mpu6050_node/: CMakeLists.txt  package.xml
(+75 files in other folders)
